<resources>
  <string name="app_name">Movies</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Movies</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="nav_trending">Trending</string>
  <string name="nav_add_movie">Add a movie</string>
  <string name="nav_search">Search</string>
  <string name="nav_favorites">Favorites</string>
  <string name="action_settings">Settings</string>
  <string name="movie_image">Movie Image</string>
  <string name="movie_title">Title</string>
  <string name="movie_overview">Overview</string>
  <string name="movie_rating">Rating</string>
  <string name="add_favorites">Add To Favorites</string>
  <string name="remove_favorites">Remove From Favorites</string>
  <string name="share">Share</string>
  <string name="search_name">Name</string>
  <string name="search_button">Search</string>
</resources>
