<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/parent_layout_list"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
>
    <ImageView
            android:id="@+id/image_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Details image"
    />
    <LinearLayout
            android:id="@+id/movie_details"
            android:layout_below="@+id/image_details"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textSize="18sp"
                android:textStyle="bold"
        />
        <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_overview"
                android:textStyle="bold"
                android:textSize="18sp"
        />
        <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_rating"
                android:textStyle="bold"
                android:textSize="18sp"
        />
        <TextView
                android:id="@+id/movie_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/details_add_favorites"
            android:layout_below="@+id/movie_details"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/button_add_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_favorites"
        />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/details_remove_favorites"
            android:layout_below="@+id/movie_details"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/button_remove_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_favorites"
        />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/details_share"
            android:layout_below="@+id/details_remove_favorites"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/button_share_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
        />
    </LinearLayout>

</RelativeLayout>